compiler/parser.output
   0  $accept : %entry% $end

   1  program :
   2          | program vdecl
   3          | program fdecl

   4  fdecl : var_type ID LPAREN formals_opt RPAREN LBRACE cont_list RBRACE

   5  var_type : INT
   6           | STR
   7           | BOOL

   8  formals_opt :
   9              | formal_list

  10  formal_list : var_type ID
  11              | formal_list COMMA var_type ID

  12  vdecl : var_type ID SEMI

  13  cont_list :
  14            | cont_list stmt
  15            | cont_list vdecl

  16  stmt : expr SEMI
  17       | RETURN expr SEMI
  18       | LBRACE stmt_list RBRACE
  19       | IF LPAREN expr RPAREN stmt
  20       | IF LPAREN expr RPAREN stmt ELSE stmt
  21       | BREAK SEMI
  22       | OPEN expr SEMI
  23       | CLOSE expr SEMI

  24  stmt_list :
  25            | stmt_list stmt

  26  expr : LIT_INT
  27       | LIT_STR
  28       | ID
  29       | STD
  30       | expr PLUS expr
  31       | expr MINUS expr
  32       | expr PLUS expr AT expr
  33       | expr MINUS expr AT expr
  34       | expr TIMES expr
  35       | expr DIVIDE expr
  36       | expr EQ expr
  37       | expr NEQ expr
  38       | expr LESS expr
  39       | expr LEQ expr
  40       | expr GRT expr
  41       | expr GEQ expr
  42       | ID ASSIGN expr
  43       | ID LBRACK LIT_INT RBRACK
  44       | ID LPANGLE LIT_INT RANGLE
  45       | ID LANGLE LIT_INT RANGLE
  46       | ID LBRACK LIT_INT COMMA LIT_INT RBRACK
  47       | ID SEARCH expr
  48       | ID SPLIT expr
  49       | CIN expr expr
  50       | COUT expr expr
  51       | ID LPAREN actuals_opt RPAREN
  52       | LPAREN expr RPAREN

  53  actuals_opt :
  54              | actuals_list

  55  actuals_list : expr
  56               | actuals_list COMMA expr

  57  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (57)
	program : .  (1)

	.  reduce 1

	program  goto 3


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : program . vdecl  (2)
	program : program . fdecl  (3)
	%entry% : '\001' program .  (57)

	INT  shift 4
	STR  shift 5
	BOOL  shift 6
	$end  reduce 57

	vdecl  goto 7
	fdecl  goto 8
	var_type  goto 9


state 4
	var_type : INT .  (5)

	.  reduce 5


state 5
	var_type : STR .  (6)

	.  reduce 6


state 6
	var_type : BOOL .  (7)

	.  reduce 7


state 7
	program : program vdecl .  (2)

	.  reduce 2


state 8
	program : program fdecl .  (3)

	.  reduce 3


state 9
	fdecl : var_type . ID LPAREN formals_opt RPAREN LBRACE cont_list RBRACE  (4)
	vdecl : var_type . ID SEMI  (12)

	ID  shift 10
	.  error


state 10
	fdecl : var_type ID . LPAREN formals_opt RPAREN LBRACE cont_list RBRACE  (4)
	vdecl : var_type ID . SEMI  (12)

	SEMI  shift 11
	LPAREN  shift 12
	.  error


state 11
	vdecl : var_type ID SEMI .  (12)

	.  reduce 12


state 12
	fdecl : var_type ID LPAREN . formals_opt RPAREN LBRACE cont_list RBRACE  (4)
	formals_opt : .  (8)

	INT  shift 4
	STR  shift 5
	BOOL  shift 6
	RPAREN  reduce 8

	var_type  goto 13
	formals_opt  goto 14
	formal_list  goto 15


state 13
	formal_list : var_type . ID  (10)

	ID  shift 16
	.  error


state 14
	fdecl : var_type ID LPAREN formals_opt . RPAREN LBRACE cont_list RBRACE  (4)

	RPAREN  shift 17
	.  error


state 15
	formals_opt : formal_list .  (9)
	formal_list : formal_list . COMMA var_type ID  (11)

	COMMA  shift 18
	RPAREN  reduce 9


state 16
	formal_list : var_type ID .  (10)

	.  reduce 10


state 17
	fdecl : var_type ID LPAREN formals_opt RPAREN . LBRACE cont_list RBRACE  (4)

	LBRACE  shift 19
	.  error


state 18
	formal_list : formal_list COMMA . var_type ID  (11)

	INT  shift 4
	STR  shift 5
	BOOL  shift 6
	.  error

	var_type  goto 20


state 19
	fdecl : var_type ID LPAREN formals_opt RPAREN LBRACE . cont_list RBRACE  (4)
	cont_list : .  (13)

	.  reduce 13

	cont_list  goto 21


state 20
	formal_list : formal_list COMMA var_type . ID  (11)

	ID  shift 22
	.  error


state 21
	fdecl : var_type ID LPAREN formals_opt RPAREN LBRACE cont_list . RBRACE  (4)
	cont_list : cont_list . stmt  (14)
	cont_list : cont_list . vdecl  (15)

	LPAREN  shift 23
	LBRACE  shift 24
	RBRACE  shift 25
	COUT  shift 26
	CIN  shift 27
	INT  shift 4
	STR  shift 5
	BOOL  shift 6
	IF  shift 28
	RETURN  shift 29
	OPEN  shift 30
	CLOSE  shift 31
	BREAK  shift 32
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	.  error

	vdecl  goto 37
	var_type  goto 38
	stmt  goto 39
	expr  goto 40


state 22
	formal_list : formal_list COMMA var_type ID .  (11)

	.  reduce 11


state 23
	expr : LPAREN . expr RPAREN  (52)

	LPAREN  shift 23
	COUT  shift 26
	CIN  shift 27
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	.  error

	expr  goto 41


state 24
	stmt : LBRACE . stmt_list RBRACE  (18)
	stmt_list : .  (24)

	.  reduce 24

	stmt_list  goto 42


state 25
	fdecl : var_type ID LPAREN formals_opt RPAREN LBRACE cont_list RBRACE .  (4)

	.  reduce 4


state 26
	expr : COUT . expr expr  (50)

	LPAREN  shift 23
	COUT  shift 26
	CIN  shift 27
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	.  error

	expr  goto 43


state 27
	expr : CIN . expr expr  (49)

	LPAREN  shift 23
	COUT  shift 26
	CIN  shift 27
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	.  error

	expr  goto 44


state 28
	stmt : IF . LPAREN expr RPAREN stmt  (19)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (20)

	LPAREN  shift 45
	.  error


state 29
	stmt : RETURN . expr SEMI  (17)

	LPAREN  shift 23
	COUT  shift 26
	CIN  shift 27
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	.  error

	expr  goto 46


state 30
	stmt : OPEN . expr SEMI  (22)

	LPAREN  shift 23
	COUT  shift 26
	CIN  shift 27
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	.  error

	expr  goto 47


state 31
	stmt : CLOSE . expr SEMI  (23)

	LPAREN  shift 23
	COUT  shift 26
	CIN  shift 27
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	.  error

	expr  goto 48


state 32
	stmt : BREAK . SEMI  (21)

	SEMI  shift 49
	.  error


state 33
	expr : STD .  (29)

	.  reduce 29


state 34
	expr : LIT_INT .  (26)

	.  reduce 26


state 35
	expr : LIT_STR .  (27)

	.  reduce 27


36: shift/reduce conflict (shift 50, reduce 28) on LPAREN
state 36
	expr : ID .  (28)
	expr : ID . ASSIGN expr  (42)
	expr : ID . LBRACK LIT_INT RBRACK  (43)
	expr : ID . LPANGLE LIT_INT RANGLE  (44)
	expr : ID . LANGLE LIT_INT RANGLE  (45)
	expr : ID . LBRACK LIT_INT COMMA LIT_INT RBRACK  (46)
	expr : ID . SEARCH expr  (47)
	expr : ID . SPLIT expr  (48)
	expr : ID . LPAREN actuals_opt RPAREN  (51)

	LPAREN  shift 50
	LBRACK  shift 51
	LPANGLE  shift 52
	LANGLE  shift 53
	ASSIGN  shift 54
	SPLIT  shift 55
	SEARCH  shift 56
	SEMI  reduce 28
	RPAREN  reduce 28
	COMMA  reduce 28
	PLUS  reduce 28
	MINUS  reduce 28
	TIMES  reduce 28
	DIVIDE  reduce 28
	EQ  reduce 28
	NEQ  reduce 28
	LESS  reduce 28
	LEQ  reduce 28
	GRT  reduce 28
	GEQ  reduce 28
	AT  reduce 28
	COUT  reduce 28
	CIN  reduce 28
	STD  reduce 28
	LIT_INT  reduce 28
	LIT_STR  reduce 28
	ID  reduce 28


state 37
	cont_list : cont_list vdecl .  (15)

	.  reduce 15


state 38
	vdecl : var_type . ID SEMI  (12)

	ID  shift 57
	.  error


state 39
	cont_list : cont_list stmt .  (14)

	.  reduce 14


state 40
	stmt : expr . SEMI  (16)
	expr : expr . PLUS expr  (30)
	expr : expr . MINUS expr  (31)
	expr : expr . PLUS expr AT expr  (32)
	expr : expr . MINUS expr AT expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NEQ expr  (37)
	expr : expr . LESS expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GRT expr  (40)
	expr : expr . GEQ expr  (41)

	SEMI  shift 58
	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	DIVIDE  shift 62
	EQ  shift 63
	NEQ  shift 64
	LESS  shift 65
	LEQ  shift 66
	GRT  shift 67
	GEQ  shift 68
	.  error


state 41
	expr : expr . PLUS expr  (30)
	expr : expr . MINUS expr  (31)
	expr : expr . PLUS expr AT expr  (32)
	expr : expr . MINUS expr AT expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NEQ expr  (37)
	expr : expr . LESS expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GRT expr  (40)
	expr : expr . GEQ expr  (41)
	expr : LPAREN expr . RPAREN  (52)

	RPAREN  shift 69
	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	DIVIDE  shift 62
	EQ  shift 63
	NEQ  shift 64
	LESS  shift 65
	LEQ  shift 66
	GRT  shift 67
	GEQ  shift 68
	.  error


state 42
	stmt : LBRACE stmt_list . RBRACE  (18)
	stmt_list : stmt_list . stmt  (25)

	LPAREN  shift 23
	LBRACE  shift 24
	RBRACE  shift 70
	COUT  shift 26
	CIN  shift 27
	IF  shift 28
	RETURN  shift 29
	OPEN  shift 30
	CLOSE  shift 31
	BREAK  shift 32
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	.  error

	stmt  goto 71
	expr  goto 40


state 43
	expr : expr . PLUS expr  (30)
	expr : expr . MINUS expr  (31)
	expr : expr . PLUS expr AT expr  (32)
	expr : expr . MINUS expr AT expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NEQ expr  (37)
	expr : expr . LESS expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GRT expr  (40)
	expr : expr . GEQ expr  (41)
	expr : COUT expr . expr  (50)

	LPAREN  shift 23
	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	DIVIDE  shift 62
	EQ  shift 63
	NEQ  shift 64
	LESS  shift 65
	LEQ  shift 66
	GRT  shift 67
	GEQ  shift 68
	COUT  shift 26
	CIN  shift 27
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	.  error

	expr  goto 72


state 44
	expr : expr . PLUS expr  (30)
	expr : expr . MINUS expr  (31)
	expr : expr . PLUS expr AT expr  (32)
	expr : expr . MINUS expr AT expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NEQ expr  (37)
	expr : expr . LESS expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GRT expr  (40)
	expr : expr . GEQ expr  (41)
	expr : CIN expr . expr  (49)

	LPAREN  shift 23
	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	DIVIDE  shift 62
	EQ  shift 63
	NEQ  shift 64
	LESS  shift 65
	LEQ  shift 66
	GRT  shift 67
	GEQ  shift 68
	COUT  shift 26
	CIN  shift 27
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	.  error

	expr  goto 73


state 45
	stmt : IF LPAREN . expr RPAREN stmt  (19)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (20)

	LPAREN  shift 23
	COUT  shift 26
	CIN  shift 27
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	.  error

	expr  goto 74


state 46
	stmt : RETURN expr . SEMI  (17)
	expr : expr . PLUS expr  (30)
	expr : expr . MINUS expr  (31)
	expr : expr . PLUS expr AT expr  (32)
	expr : expr . MINUS expr AT expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NEQ expr  (37)
	expr : expr . LESS expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GRT expr  (40)
	expr : expr . GEQ expr  (41)

	SEMI  shift 75
	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	DIVIDE  shift 62
	EQ  shift 63
	NEQ  shift 64
	LESS  shift 65
	LEQ  shift 66
	GRT  shift 67
	GEQ  shift 68
	.  error


state 47
	stmt : OPEN expr . SEMI  (22)
	expr : expr . PLUS expr  (30)
	expr : expr . MINUS expr  (31)
	expr : expr . PLUS expr AT expr  (32)
	expr : expr . MINUS expr AT expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NEQ expr  (37)
	expr : expr . LESS expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GRT expr  (40)
	expr : expr . GEQ expr  (41)

	SEMI  shift 76
	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	DIVIDE  shift 62
	EQ  shift 63
	NEQ  shift 64
	LESS  shift 65
	LEQ  shift 66
	GRT  shift 67
	GEQ  shift 68
	.  error


state 48
	stmt : CLOSE expr . SEMI  (23)
	expr : expr . PLUS expr  (30)
	expr : expr . MINUS expr  (31)
	expr : expr . PLUS expr AT expr  (32)
	expr : expr . MINUS expr AT expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NEQ expr  (37)
	expr : expr . LESS expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GRT expr  (40)
	expr : expr . GEQ expr  (41)

	SEMI  shift 77
	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	DIVIDE  shift 62
	EQ  shift 63
	NEQ  shift 64
	LESS  shift 65
	LEQ  shift 66
	GRT  shift 67
	GEQ  shift 68
	.  error


state 49
	stmt : BREAK SEMI .  (21)

	.  reduce 21


state 50
	expr : ID LPAREN . actuals_opt RPAREN  (51)
	actuals_opt : .  (53)

	LPAREN  shift 23
	COUT  shift 26
	CIN  shift 27
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	RPAREN  reduce 53

	expr  goto 78
	actuals_opt  goto 79
	actuals_list  goto 80


state 51
	expr : ID LBRACK . LIT_INT RBRACK  (43)
	expr : ID LBRACK . LIT_INT COMMA LIT_INT RBRACK  (46)

	LIT_INT  shift 81
	.  error


state 52
	expr : ID LPANGLE . LIT_INT RANGLE  (44)

	LIT_INT  shift 82
	.  error


state 53
	expr : ID LANGLE . LIT_INT RANGLE  (45)

	LIT_INT  shift 83
	.  error


state 54
	expr : ID ASSIGN . expr  (42)

	LPAREN  shift 23
	COUT  shift 26
	CIN  shift 27
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	.  error

	expr  goto 84


state 55
	expr : ID SPLIT . expr  (48)

	LPAREN  shift 23
	COUT  shift 26
	CIN  shift 27
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	.  error

	expr  goto 85


state 56
	expr : ID SEARCH . expr  (47)

	LPAREN  shift 23
	COUT  shift 26
	CIN  shift 27
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	.  error

	expr  goto 86


state 57
	vdecl : var_type ID . SEMI  (12)

	SEMI  shift 11
	.  error


state 58
	stmt : expr SEMI .  (16)

	.  reduce 16


state 59
	expr : expr PLUS . expr  (30)
	expr : expr PLUS . expr AT expr  (32)

	LPAREN  shift 23
	COUT  shift 26
	CIN  shift 27
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	.  error

	expr  goto 87


state 60
	expr : expr MINUS . expr  (31)
	expr : expr MINUS . expr AT expr  (33)

	LPAREN  shift 23
	COUT  shift 26
	CIN  shift 27
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	.  error

	expr  goto 88


state 61
	expr : expr TIMES . expr  (34)

	LPAREN  shift 23
	COUT  shift 26
	CIN  shift 27
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	.  error

	expr  goto 89


state 62
	expr : expr DIVIDE . expr  (35)

	LPAREN  shift 23
	COUT  shift 26
	CIN  shift 27
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	.  error

	expr  goto 90


state 63
	expr : expr EQ . expr  (36)

	LPAREN  shift 23
	COUT  shift 26
	CIN  shift 27
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	.  error

	expr  goto 91


state 64
	expr : expr NEQ . expr  (37)

	LPAREN  shift 23
	COUT  shift 26
	CIN  shift 27
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	.  error

	expr  goto 92


state 65
	expr : expr LESS . expr  (38)

	LPAREN  shift 23
	COUT  shift 26
	CIN  shift 27
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	.  error

	expr  goto 93


state 66
	expr : expr LEQ . expr  (39)

	LPAREN  shift 23
	COUT  shift 26
	CIN  shift 27
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	.  error

	expr  goto 94


state 67
	expr : expr GRT . expr  (40)

	LPAREN  shift 23
	COUT  shift 26
	CIN  shift 27
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	.  error

	expr  goto 95


state 68
	expr : expr GEQ . expr  (41)

	LPAREN  shift 23
	COUT  shift 26
	CIN  shift 27
	STD  shift 33
	LIT_INT  shift 34
	LIT_STR  shift 35
	ID  shift 36
	.  error

	expr  goto 96


state 69
	expr : LPAREN expr RPAREN .  (52)

	.  reduce 52


state 70
	stmt : LBRACE stmt_list RBRACE .  (18)

	.  reduce 18


state 71
	stmt_list : stmt_list stmt .  (25)

	.  reduce 25


state 72
	expr : expr . PLUS expr  (30)
	expr : expr . MINUS expr  (31)
	expr : expr . PLUS expr AT expr  (32)
	expr : expr . MINUS expr AT expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NEQ expr  (37)
	expr : expr . LESS expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GRT expr  (40)
	expr : expr . GEQ expr  (41)
	expr : COUT expr expr .  (50)

	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	DIVIDE  shift 62
	EQ  shift 63
	NEQ  shift 64
	LESS  shift 65
	LEQ  shift 66
	GRT  shift 67
	GEQ  shift 68
	SEMI  reduce 50
	LPAREN  reduce 50
	RPAREN  reduce 50
	COMMA  reduce 50
	AT  reduce 50
	COUT  reduce 50
	CIN  reduce 50
	STD  reduce 50
	LIT_INT  reduce 50
	LIT_STR  reduce 50
	ID  reduce 50


state 73
	expr : expr . PLUS expr  (30)
	expr : expr . MINUS expr  (31)
	expr : expr . PLUS expr AT expr  (32)
	expr : expr . MINUS expr AT expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NEQ expr  (37)
	expr : expr . LESS expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GRT expr  (40)
	expr : expr . GEQ expr  (41)
	expr : CIN expr expr .  (49)

	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	DIVIDE  shift 62
	EQ  shift 63
	NEQ  shift 64
	LESS  shift 65
	LEQ  shift 66
	GRT  shift 67
	GEQ  shift 68
	SEMI  reduce 49
	LPAREN  reduce 49
	RPAREN  reduce 49
	COMMA  reduce 49
	AT  reduce 49
	COUT  reduce 49
	CIN  reduce 49
	STD  reduce 49
	LIT_INT  reduce 49
	LIT_STR  reduce 49
	ID  reduce 49


state 74
	stmt : IF LPAREN expr . RPAREN stmt  (19)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (20)
	expr : expr . PLUS expr  (30)
	expr : expr . MINUS expr  (31)
	expr : expr . PLUS expr AT expr  (32)
	expr : expr . MINUS expr AT expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NEQ expr  (37)
	expr : expr . LESS expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GRT expr  (40)
	expr : expr . GEQ expr  (41)

	RPAREN  shift 97
	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	DIVIDE  shift 62
	EQ  shift 63
	NEQ  shift 64
	LESS  shift 65
	LEQ  shift 66
	GRT  shift 67
	GEQ  shift 68
	.  error


state 75
	stmt : RETURN expr SEMI .  (17)

	.  reduce 17


state 76
	stmt : OPEN expr SEMI .  (22)

	.  reduce 22


state 77
	stmt : CLOSE expr SEMI .  (23)

	.  reduce 23


state 78
	expr : expr . PLUS expr  (30)
	expr : expr . MINUS expr  (31)
	expr : expr . PLUS expr AT expr  (32)
	expr : expr . MINUS expr AT expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NEQ expr  (37)
	expr : expr . LESS expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GRT expr  (40)
	expr : expr . GEQ expr  (41)
	actuals_list : expr .  (55)

	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	DIVIDE  shift 62
	EQ  shift 63
	NEQ  shift 64
	LESS  shift 65
	LEQ  shift 66
	GRT  shift 67
	GEQ  shift 68
	RPAREN  reduce 55
	COMMA  reduce 55


state 79
	expr : ID LPAREN actuals_opt . RPAREN  (51)

	RPAREN  shift 98
	.  error


state 80
	actuals_opt : actuals_list .  (54)
	actuals_list : actuals_list . COMMA expr  (56)

	COMMA  shift 99
	RPAREN  reduce 54


state 81
	expr : ID LBRACK LIT_INT . RBRACK  (43)
	expr : ID LBRACK LIT_INT . COMMA LIT_INT RBRACK  (46)

	COMMA  shift 100
	RBRACK  shift 101
	.  error


state 82
	expr : ID LPANGLE LIT_INT . RANGLE  (44)

	RANGLE  shift 102
	.  error


state 83
	expr : ID LANGLE LIT_INT . RANGLE  (45)

	RANGLE  shift 103
	.  error


state 84
	expr : expr . PLUS expr  (30)
	expr : expr . MINUS expr  (31)
	expr : expr . PLUS expr AT expr  (32)
	expr : expr . MINUS expr AT expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NEQ expr  (37)
	expr : expr . LESS expr  (38)
	expr : expr . LEQ expr  (39)
	expr : expr . GRT expr  (40)
	expr : expr . GEQ expr  (41)
	expr : ID ASSIGN expr .  (42)

	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	DIVIDE  shift 62
	EQ  shift 63
	NEQ  shift 64
	LESS  shift 65
	LEQ  shift 66
	GRT  shift 67
	GEQ  shift 68
	SEMI  reduce 42
	LPAREN  reduce 42
	RPAREN  reduce 42
	COMMA  reduce 42
	AT  reduce 42
	COUT  reduce 42
	CIN  reduce 42
	STD  reduce 42
	LIT_INT  reduce 42
	LIT_STR  reduce 42
	ID  reduce 42


state 85
	expr : expr . PLUS expr  (30)
	expr : expr . MINUS expr  (31)
	expr : expr . PLUS expr AT expr  (32)
	expr : expr . MINUS expr AT expr  (33)
	expr : expr . TIMES expr  (34)
